Closed
Bug 388608
Opened 18 years ago
Closed 18 years ago
Accessible Hierarchy broken effective 17th July trunk build
Categories
(Core :: Disability Access APIs, defect, P2)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jdiggs, Assigned: ginnchen+exoracle)
References
(Blocks 1 open bug)
Details
(Keywords: access)
Attachments
(1 file)
|
2.32 KB,
patch
|
benjamin
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Launch either Firefox or Thunderbird from 17th July or later
2. Launch Accerciser and use it to examine the hierarchy of accessibles
Expected results: The hierarchy would be exposed.
Actual results: The application's frame has a single child of role "redundant object" which claims 0 children.
This problem does not occur with the 16th July and earlier builds.
| Reporter | ||
Comment 1•18 years ago
|
||
Sorry for the spam. I forgot to update the priority. P2 because this is making accessibility testing and development impossible. Thanks!
Priority: -- → P2
Comment 2•18 years ago
|
||
Ginn, is it possible bug 387347 brake this?
I don't think so.
I think our a11y lib is not well loaded.
I saw symbol unresolved issue on Solaris. may related.
I can't use PR_SetEnv to unsetenv on Unix.
Anyway, it's for Unix only, I think it's safe to use getenv, setenv, unsetenv directly.
Assignee: aaronleventhal → ginn.chen
Status: NEW → ASSIGNED
Attachment #272909 -
Flags: review?(benjamin)
Comment 6•18 years ago
|
||
+ aaa:labelledby="onloadRadio onloadProvider onloadAfter"/>
IIRC we don't support IDREFS for the value of @labelledby. We always assume that value is IDREF. Am I wrong?
Firefox / Thunderbird is totally inaccessible on Linux / Solaris because of this bug.
Severity: major → blocker
Updated•18 years ago
|
Flags: blocking1.9?
Comment 9•18 years ago
|
||
Comment on attachment 272909 [details] [diff] [review]
patch
I was told at one point that there were unix-like OSes that don't support unsetenv, and that the XP way to do this was PR_SetEnv("NAME=") which would set the value to empty if there was not an unsetenv implementation. But you're welcome to try it and see whether my memory is incorrect.
Attachment #272909 -
Flags: review?(benjamin) → review+
| Assignee | ||
Comment 10•18 years ago
|
||
In nsprpub/pr/include/prenv.h
A call to PR_SetEnv() where the parameter is
of the form "name=" may un-set the envrionment variable on
some platforms; on others it may set the value of the
environment variable to the null-string.
Linux and Solaris is not the "some platform".
Checkin and see if any platform is broken.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 11•7 years ago
|
||
Keywords: sec508
You need to log in
before you can comment on or make changes to this bug.
Description
•