Bug 388608 Accessible Hierarchy broken on Unix r=benjamin