toolkit/xre/nsNativeAppSupportUnix.cpp
@@ -45,6 +45,7 @@
 #include "nsServiceManagerUtils.h"
 #include "prlink.h"
 
+#include <stdlib.h>
 #include <glib.h>
 #include <glib-object.h>
 
@@ -158,8 +159,25 @@ nsNativeAppSupportUnix::Start(PRBool *aRetVal)
     return NS_OK;
   }
 
+#ifdef ACCESSIBILITY
+  // We will load gail, atk-bridge by ourself later
+  // We can't run atk-bridge init here, because gail get the control
+  // Set GNOME_ACCESSIBILITY to 0 can avoid this
+  static const char *accEnv = "GNOME_ACCESSIBILITY";
+  const char *accOldValue = getenv(accEnv);
+  setenv(accEnv, "0", 1);
+#endif
+
   char *argv[2] = { "gecko", "--disable-crash-dialog" };
   gnome_program_init("Gecko", "1.0", libgnomeui_module_info_get(), 2, argv, NULL);
+
+#ifdef ACCESSIBILITY
+  if (accOldValue) { 
+    setenv(accEnv, accOldValue, 1);
+  } else {
+    unsetenv(accEnv);
+  }
+#endif
 
   // Careful! These libraries cannot be unloaded after this point because
   // gnome_program_init causes atexit handlers to be registered. Strange
